新增servlet生成图片验证码。主要是类 BufferedImage的使用。 去除build目录文件夹，对应章节： 只为成功找方法，不为失败找借口！ javaweb学习总结(九)—— 通过Servlet生成验证码图片

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -151,12 +151,10 @@
     <servlet-name>ResponseDownloadDemo</servlet-name>
     <url-pattern>/http/ResponseDownloadDemo</url-pattern>
   </servlet-mapping>
-  
   <servlet-mapping>
     <servlet-name>ResponseContypeDemo</servlet-name>
     <url-pattern>/http/ResponseContypeDemo</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>ResponseImageDemo</servlet-name>
     <servlet-class>top.mysecondgod.response.study.ResponseImageDemo</servlet-class>
@@ -165,6 +163,15 @@
     <servlet-name>ResponseImageDemo</servlet-name>
     <url-pattern>/http/ResponseImageDemo</url-pattern>
   </servlet-mapping>
-  
-  
+  <servlet>
+    <description></description>
+    <display-name>ServletImageDemo</display-name>
+    <servlet-name>ServletImageDemo</servlet-name>
+    <servlet-class>top.mysecondgod.servlet.study.ServletImageDemo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServletImageDemo</servlet-name>
+    <url-pattern>/ServletImageDemo</url-pattern>
+    <url-pattern>/servlet/ServletImageDemo</url-pattern>
+  </servlet-mapping>
 </web-app>
